--- a/06 events/index.html
+++ b/06 events/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <script type="module" defer src="app.js"></script>
-</head>
+    <head>
+        <Script type="module" defer src="app.js"> </Script>
+    </head>
 <body>
-    <button type="button" id="myButton">Click here!</button>
+    <button>
+    <input type="button" value="click here" id="myButton"></input>
+    <input type="button" value="mijn knop" id="myButton2"></input>
+    </button>
+
+    <div id="clickableDiv">click me<div>
 </body>
 </html>
